--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <html>
   <head>
     <title>How to be a vegetarian</title>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-85886934-1', 'auto');
+    ga('send', 'pageview');
+
+    </script>
   </head>
   <body>
-
+	<h1>How to get started on vegetarianism?</h1>
+	<p>Don't eat meat.</p>
   </body>
 </html>
