Text, style changes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
     ga('send', 'pageview');
 
     </script>
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <style>
+      * {font-family: 'Oswald', sans-serif; color:white;}
+      body {background-color: black; text-align: center;}
+      
+    </style>
   </head>
   <body>
-	<h1>How to get started on vegetarianism?</h1>
+	<h1>How to be a vegetarian</h1>
 	<p>Don't eat meat.</p>
+
+	<h2>Questions</h2>
+	<p>Q: What if I want to eat meat instead</p>
+	<p>A: Then eat meat</p>
   </body>
 </html>
